# ChangeLog for dev-perl/HTML-SimpleParse
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-SimpleParse/ChangeLog,v 1.3 2003/02/12 06:18:55 vapier Exp $

*HTML-SimpleParse-0.10 (18 Dec 2002)

  18 Dec 2002; Michael Cummings <mcummings>
  HTML-SimpleParse-0.10.ebuild:

  Satisfies future dep, bug 7744 - ebuild courtesy of Todd