@@ -1,3 +1,5 @@
 MD5 b586fdc279b985ce069bf0acf59b0138 ChangeLog 406
 MD5 fd2ec24eaf27bb574b70ed8d7a31a540 HTML-SimpleParse-0.10.ebuild 461
+MD5 69dc23abd64576d342186b98bb549dee HTML-SimpleParse-0.11.ebuild 484
 MD5 4deae54287f2ec5d5a3cafc963a033e0 files/digest-HTML-SimpleParse-0.10 71
+MD5 14cfe6b2a2ae46d3f2d305c05d5ff78d files/digest-HTML-SimpleParse-0.11 71
