@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/HTML-SimpleParse
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-SimpleParse/ChangeLog,v 1.3 2003/02/12 06:18:55 vapier Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTML-SimpleParse/ChangeLog,v 1.4 2003/06/08 03:28:16 mcummings Exp $
+
+*HTML-SimpleParse-0.11 (07 Jun 2003)
+
+  07 Jun 2003; Michael Cummings <mcummings@gentoo.org>
+  HTML-SimpleParse-0.11.ebuild:
+  CPAN update
 
 *HTML-SimpleParse-0.10 (18 Dec 2002)
 
